# openfinance

./: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  seed_categories.py  seed_dev.py
.claude/: launch.json
alembic/: env.py
app/: categorization.py  config.py  database.py  main.py  models.py  pluggy_client.py  security.py
docs/: 10d-category-removal.md  10d-manual-classification-override.md  10d-pluggy-based-classification.md  backlog_tecnico.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 0001_sync_isolation_and_lock.sql
scripts/: backup_database.py  create_user.py  diagnose_duplicates.py  inspect_pluggy_classifications.py  mark_duplicate_transactions.py  reclassify_transactions_v2.py  reclassify_user_rules.py  restore_database.py
tests/: test_auth.py  test_backend_regression.py  test_bank_balance.py  test_card_sign_convention.py  test_classification_override.py  test_config.py  test_credit_card_invoice_payment_status.py  test_credit_categories.py  test_current_card_invoice.py  test_dashboard_diagnostics.py  test_database_backup.py  test_database_restore.py  test_database_retention.py  test_deactivate_item.py  test_duplicate_detection.py  test_duplicate_transactions.py  test_expected_income.py  test_fixed_costs.py  test_invoice_history.py  test_is_duplicate_filter.py  test_isolation.py  test_legacy_category_removal.py  test_lifecycle.py  test_pages.py  (+7 more)
(+178 files in other folders)
