[project]
name = "openfinance"
version = "0.1.0"
dependencies = [
    "alembic",
    "fastapi[standard]",
    "sqlmodel",
    "httpx",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
